--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.3",
+    "react-wrap-balancer": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
